# gitlab-project-exporter

./: .tool-versions  AGENTS.md  Dockerfile  Makefile  README.md  app.sh  dev.sh  pyproject.toml  renovate.json
.tekton/: gitlab-project-exporter-main-pull-request.yaml  gitlab-project-exporter-main-push.yaml
gitlab_project_exporter/: __main__.py  collector.py  config.py  gitlab_project.py  log_config.py  main.py  server.py
openshift/: deploy.yaml
tests/: conftest.py  test_api.py  test_collector.py  test_core.py  test_gitlab_project.py  test_log_config.py  test_main.py
