[project]
name = "gitlab-project-exporter"
version = "0.2.0"
description = "Gitlab Project Prometheus exporter"
authors = [{ name = "Red Hat App-SRE Team", email = "sd-app-sre@redhat.com" }]
license = { text = "Apache 2.0" }
requires-python = "~= 3.12.0"
dependencies = [
    "fastapi ~=0.119.0",
    "python-gitlab ~=5.6.0",
    "pydantic ~=2.12.0",
    "pydantic-settings ~=2.11.0",
    "prometheus-client ~=0.23.1",
    "uvicorn ~=0.37.0",
]

[project.urls]
homepage = "https://github.com/app-sre/gitlab-project-exporter"
repository = "https://github.com/app-sre/gitlab-project-exporter"
documentation = "https://github.com/app-sre/gitlab-project-exporter"

[dependency-groups]
dev = [
    "httpx ~=0.28.1",
    "mypy ~=1.18.2",
    "pytest ~=8.4.2",
    "pytest-cov ~=6.3.0",
    "pytest-mock ~=3.15.0",
    "responses ~=0.25.3",
    "ruff ~=0.14.0",
    "uvicorn[standard] ~=0.37.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["gitlab_project_exporter"]

[tool.hatch.build.targets.wheel]
only-include = ["gitlab_project_exporter"]

# Ruff configuration
[tool.ruff]
line-length = 88
src = ["gitlab_project_exporter"]
extend-exclude = [
    ".local",
    ".cache",
    "tmp",
]
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "CPY",     # Missing copyright header
    "D100",    # Missing docstring in public module
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D104",    # Missing docstring in public package
    "D107",    # Missing docstring in __init__
    "D203",    # 1 blank line required before class docstring
    "D211",    # No blank lines allowed before class docstring
    "D212",    # multi-line-summary-first-line
    "D213",    # multi-line-summary-second-line
    "D4",      # Doc string style
    "E501",    # Line too long
    "PLR0904", # Too many public methods
    "PLR0913", # Too many arguments
    "PLR0917", # Too many positional arguments
    "S101",    # Use of assert detected. Pytest uses assert
    "S404",    # subprocess import
    "TRY300",  # try-consider-else
    # pydoclint
    "DOC",
    # May conflict with the formatter, https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q",
    "COM812",
    "COM819",
    "ISC001",
]
[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["gitlab_project_exporter"]

# Mypy configuration
[tool.mypy]
files = ["gitlab_project_exporter", "tests"]
enable_error_code = ["truthy-bool", "redundant-expr"]
no_implicit_optional = true
check_untyped_defs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Coverage configuration
[tool.coverage.run]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85
